--- a/grocerylogger.kv
+++ b/grocerylogger.kv
@@ -1,3 +1,4 @@
+#:kivy !
 #: import ListAdapter kivy.adapters.listadapter.ListAdapter
 #: import ListItemButton kivy.uix.listview.ListItemButton
 #: import Button kivy.uix.button.Button
