--- a/grocerylogger.kv
+++ b/grocerylogger.kv
@@ -1,4 +1,3 @@
-#:kivy !
 #: import ListAdapter kivy.adapters.listadapter.ListAdapter
 #: import ListItemButton kivy.uix.listview.ListItemButton
 #: import Button kivy.uix.button.Button
@@ -20,6 +19,67 @@
     #background_down: ''
     background_color: (.88, .88, .88, 1)
     size_hint: .2, .1
+
+<Other@Popup>:
+    size_hint: .6, .5
+    auto_dismiss: False
+    title: "Add Other Item"
+    title_align: "center"
+    FloatLayout
+        TextInput:
+            hint_text: "Enter Other Item Name"
+            write_tab: False
+            multiline: False
+            pos_hint: {"center_x": .5, "top": 1}
+            size_hint: .9,.15
+        Button:
+
+            text: "Enter Expiration Date (optional)"
+            pos_hint: {"center_x": .5, "top": .85}
+            size_hint: .9,.15
+            on_press:
+                root.get_date(month, day, year)
+
+        Spinner:
+            id: month
+            text: "Select Day"
+            pos_hint: {"center_x": .2, "top": .7}
+            size_hint: .3,.15
+            values: ['01','02','03','04','05','06','07','08','09','10','11','12']
+
+        Spinner:
+            id: month
+            text: "Select Month"
+            pos_hint: {"center_x": .5, "top": .7}
+            size_hint: .3,.15
+            values: ['01','02','03','04','05','06','07','08','09','10','11','12']
+
+        Spinner:
+            id: month
+            text: "Select Year"
+            pos_hint: {"center_x": .8, "top": .7}
+            size_hint: .3,.15
+            values: ['01','02','03','04','05','06','07','08','09','10','11','12']
+
+        Button:
+            text: "Submit"
+            size_hint: .4,.15
+            pos_hint: {"center_x": .25, "top": .15}
+            on_press: root.current = "inventory_screen"
+
+        Button:
+            text: "Cancel"
+            size_hint: .4,.15
+            pos_hint: {"center_x": .75, "top": .15}
+            on_press: root.dismiss()
+
+#    TextInput:
+#        id: barcode_number
+#        hint_text: "Scan or Enter Barcode Number"
+#        write_tab: False
+#        multiline: False
+#        pos_hint: {"center_x": .4, "top": .7}
+#        size_hint: .4,.05
 
 <MyScreenManager>:
     box2: box2
@@ -273,6 +333,9 @@
                 size_hint: .1, .1
                 text: "Other"
                 pos_hint: {"center_x": .33, "center_y": .1}
+                on_press:
+                    #root.transition.direction = "down"
+                    root.open_popup()
 
             Button:
                 font_size: 16
@@ -282,4 +345,73 @@
                 on_press:
                     root.transition.direction = "down"
                     root.current = "inventory_screen"
-
+#----------ADD OTHER SCREEN--------------------------------------------------
+#    Screen:
+#        name: "other_screen"
+#            Popup:
+#                id: other
+#                title: 'Other Items'
+#                title_align: 'center'
+#                auto_dismiss: False
+#                content: other_items
+#                pos_hint: {'x': .3, 'y': .4}
+#                size_hint: (.4, .4)
+#                FloatLayout:
+#                    id: other_items
+#                    Button:
+#                        id: itemname
+#                        pos_hint: {"center_x": .7, "top": .8}
+#                        text: "test"
+#                Label:
+#                    id: expdate
+#                    pos_hint: {"center_x": .7, "top": .7}
+#                    text: ""
+#                HeaderButton:
+#                    text: "Add Item"
+#                    pos_hint: {"center_x": .5, "top": 1}
+#                Button:
+#                    size_hint: .2, .1
+#                    font_size: 16
+#                    text: "Back to Inventory"
+#                    pos_hint: {"top": .95}
+#                    on_press:
+#                        root.transition.direction = "down"
+#                        root.current = "inventory_screen"
+#
+#
+#                TextInput:
+#                    id: barcode_number
+#                    hint_text: "Enter Food Item Name"
+#                    write_tab: False
+#                    multiline: False
+#                    pos_hint: {"center_x": .4, "top": .7}
+#                    size_hint: .4,.05
+#
+#                Button:
+#
+#                    text: "Enter Expiration Date (optional)"
+#                    pos_hint: {"center_x": .5, "top": .65}
+#                    size_hint: .6,.05
+#                    on_press:
+#                        root.get_date(month, day, year)
+#
+#                Spinner:
+#                    id: month
+#                    text: "Select Month"
+#                    pos_hint: {"center_x": .3, "top": .6}
+#                    size_hint: .2,.05
+#                    values: ['01','02','03','04','05','06','07','08','09','10','11','12']
+#
+#                Spinner:
+#                    id: day
+#                    text: "Select Day"
+#                    pos_hint: {"center_x": .5, "top": .6}
+#                    size_hint: .2,.05
+#                    values: ['01','02','03','04','05','06','07','08','09','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31']
+#
+#                Spinner:
+#                    id: year
+#                    text: "Select Year"
+#                    pos_hint: {"center_x": .7, "top": .6}
+#                    size_hint: .2,.05
+#                    values: ['2018','2019','2020']
