--- a/Integration_Testing/grocerylogger.kv
+++ b/Integration_Testing/grocerylogger.kv
@@ -2,6 +2,7 @@
 #: import ListItemButton kivy.uix.listview.ListItemButton
 #: import Button kivy.uix.button.Button
 #: import main GroceryLoggerApp
+
 <HeaderButton@Button>:
     font_size: 20
     size_hint_y: .05
@@ -169,8 +170,8 @@
                 pos_hint: {"top": .7}
                 ListView:
                     id: item_list_view
-                    adapter: ListAdapter(data=["Great Value Milk, Expires: 12/01/2018, Barcode/UPC #: 078742022871","Tyson Frozen Chicken, Expires: 12/01/2018, Barcode/UPC #: 078742022871","JIF Creamy Peanut Butter, Expires: 12/01/2018, Barcode/UPC #: 078742022871","Chipotle Tabasco, Expires: 12/01/2018, Barcode/UPC #: 078742022871", "Kraft Cheddar Cheese, Expires: 12/01/2018, Barcode/UPC #: 078742022871", "Lay's Sour Cream and Onion Chips, Expires: 12/01/2018, Barcode/UPC #: 078742022871", "Great Value Milk, Expires: 12/01/2018, Barcode/UPC #: 078742022871"], cls=main.ItemListButton, selection_mode='single')
-#                adapter: ListAdapter(data=["Great Value 2% Milk                                           12/25/18                                         123412346","Tyson Frozen Chicken","JIF Peanut Butter 40oz","Chipotle Tabasco","Kraft Cheddar Cheese","Lay's Sour Cream and Onion Chips","Great Value 2% Milk","Tyson Frozen Chicken","JIF Peanut Butter 40oz","Chipotle Tabasco","Kraft Cheddar Cheese","Lay's Sour Cream and Onion Chips","Great Value 2% Milk","Tyson Frozen Chicken","JIF Peanut Butter 40oz","Chipotle Tabasco","Kraft Cheddar Cheese","Lay's Sour Cream and Onion Chips"], cls=main.ItemListButton)
+                    adapter: ListAdapter(data=root.show_inventory(), cls=main.ItemListButton, selection_mode='single')
+
 
 #               barcode for milk: 078742022871
 
