--- a/Integration_Testing/grocerylogger.kv
+++ b/Integration_Testing/grocerylogger.kv
@@ -40,8 +40,60 @@
 
     #background_normal: 'grey.jpg'
     #background_down: ''
-    background_color: (.88, .88, .88, 1)
     size_hint: .2, .1
+
+<OtherItems@Popup>:
+    size_hint: .6, .5
+    auto_dismiss: False
+    title: "Add Other Item"
+    title_align: "center"
+    FloatLayout
+        TextInput:
+            hint_text: "Enter Other Item Name"
+            write_tab: False
+            multiline: False
+            pos_hint: {"center_x": .5, "top": 1}
+            size_hint: .9,.15
+        Button:
+
+            text: "Enter Expiration Date (optional)"
+            pos_hint: {"center_x": .5, "top": .85}
+            size_hint: .9,.15
+#            on_press:
+#                root.get_date(month, day, year)
+
+        Spinner:
+            id: year
+            text: "Select Year"
+            pos_hint: {"center_x": .2, "top": .7}
+            size_hint: .3,.15
+            values: ['2018','2019','2020']
+
+        Spinner:
+            id: month
+            text: "Select Month"
+            pos_hint: {"center_x": .5, "top": .7}
+            size_hint: .3,.15
+            values: ['01','02','03','04','05','06','07','08','09','10','11','12']
+
+        Spinner:
+            id: day
+            text: "Select Day"
+            pos_hint: {"center_x": .8, "top": .7}
+            size_hint: .3,.15
+            values: ['01','02','03','04','05','06','07','08','09','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31']
+
+        Button:
+            text: "Submit"
+            size_hint: .4,.15
+            pos_hint: {"center_x": .25, "top": .15}
+            on_press: root.current = "inventory_screen"
+
+        Button:
+            text: "Cancel"
+            size_hint: .4,.15
+            pos_hint: {"center_x": .75, "top": .15}
+            on_press: root.dismiss()
 
 <MyScreenManager>:
     box2: box2
@@ -84,7 +136,7 @@
         on_leave: root.ids.textinput.text = ''
         on_enter: root.ids.textinput.focus = True
         Popup:
-            title: 'What is your name?'
+            title: 'Profile Creation'
             title_align: 'center'
             auto_dismiss: False
             content: box
@@ -96,9 +148,10 @@
                 TextInput:
                     id: textinput
                     focus: True
-                    text: ''
+                    hint_text: 'Enter Profile Name'
+                    write_tab: False
                     multiline: False
-                    font_size: 24
+                    font_size: 20
                     on_text_validate: root.added_buttons.append(Button(text=root.ids.textinput.text))
                     on_text_validate: root.current = "profile_screen"
                 Button:
@@ -229,11 +282,12 @@
         FloatLayout:
             Label:
                 id: itemname
-                pos_hint: {"center_x": .7, "top": .8}
+                pos_hint: {"center_x": .5, "top": .9}
                 text: ""
+            #for debugging purposes, the below expiration date label is printed to the screen, remove in final build
             Label:
                 id: expdate
-                pos_hint: {"center_x": .7, "top": .7}
+                pos_hint: {"center_x": .5, "top": .8}
                 text: ""
             HeaderButton:
                 text: "Add Item"
@@ -274,25 +328,25 @@
                     root.get_date(month, day, year)
 
             Spinner:
+                id: year
+                text: "Select Year"
+                pos_hint: {"center_x": .3, "top": .6}
+                size_hint: .2,.05
+                values: ['2018','2019','2020']
+
+            Spinner:
                 id: month
                 text: "Select Month"
-                pos_hint: {"center_x": .3, "top": .6}
+                pos_hint: {"center_x": .5, "top": .6}
                 size_hint: .2,.05
                 values: ['01','02','03','04','05','06','07','08','09','10','11','12']
 
             Spinner:
                 id: day
                 text: "Select Day"
-                pos_hint: {"center_x": .5, "top": .6}
-                size_hint: .2,.05
-                values: ['01','02','03','04','05','06','07','08','09','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31']
-
-            Spinner:
-                id: year
-                text: "Select Year"
                 pos_hint: {"center_x": .7, "top": .6}
                 size_hint: .2,.05
-                values: ['2018','2019','2020']
+                values: ['01','02','03','04','05','06','07','08','09','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31']
 
 
 
@@ -309,6 +363,8 @@
                 size_hint: .1, .1
                 text: "Other"
                 pos_hint: {"center_x": .33, "center_y": .1}
+                on_press:
+                    root.open_popup()
 
             Button:
                 font_size: 16
