--- a/Integration_Testing/grocerylogger.kv
+++ b/Integration_Testing/grocerylogger.kv
@@ -3,6 +3,8 @@
 #: import Button kivy.uix.button.Button
 #: import main GroceryLoggerApp
 #:import Factory kivy.factory.Factory
+#: import FocusBehavior kivy.uix.behaviors
+#: import LayoutSelectionBehavior kivy.uix.recycleview.layout
 <MessageBox>:
     pos_hint: {'x': .3, 'y': .4}
     size_hint: (None, None)
@@ -23,7 +25,16 @@
             text: 'Cancel'
             on_release: root.dismiss()
 
-
+<Row@BoxLayout>:
+    canvas.before:
+        Color:
+            rgba: (0.06, 0.43, 0.06, 1)
+        Rectangle:
+            size: self.size
+            pos: self.pos
+    value: ''
+    Label:
+        text: root.value
 
 <HeaderButton@Button>:
     font_size: 20
@@ -97,8 +108,9 @@
 
 <MyScreenManager>:
     box2: box2
+    rv: rv
 
-    item_list: item_list_view
+#    item_list: item_list_view
 #----------SPLASH SCREEN--------------------------------------------------
     Screen:
         name: "splash_screen"
@@ -108,7 +120,8 @@
                 font_size: 32
                 background_normal: ''
                 background_color: 1, .3, .4, .85
-                text: "Gro - Log"
+                text: "Gro - Log\n\nVirtual Pantry Logging System"
+                halign: 'center'
                 on_release:
                     root.current = "profile_screen"
 #----------PROFILE SCREEN--------------------------------------------------
@@ -179,7 +192,7 @@
             text: ""
             pos_hint: {"center_x": .5, "top": 1}
         HeaderButton:
-            id: experationbutton
+            id: expirationbutton
 #            font_size: 15
 #            size_hint_y: .04
             text: ""
@@ -225,7 +238,8 @@
 #----------INVENTORY SCREEN----------------------------------------
     Screen:
         name:"inventory_screen"
-        #on_enter:
+        on_enter: root.populate()
+        on_leave: root.depopulate()
         FloatLayout:
             StandardButton:
                 text: "Back to Main Menu"
@@ -244,22 +258,40 @@
                 pos_hint: {"top": .8}
                 Button:
                     text: "Item Name"
+#                    on_press: root.populate()
 
                 Button:
                     text: "Expiration Date"
+#                    on_press: root.depopulate()
                 Button:
                     text: "Barcode/UPC Number"
 
             #add the ability to populate this list of items on entering screen instead of when opening app
             GridLayout:
-                cols: 3
+                cols: 2
 
-                padding: [0,0,0,300]
+                padding: [0,0,0,350]
                 pos_hint: {"top": .7}
-#                on_enter:
-                ListView:
-                    id: item_list_view
-                    adapter: ListAdapter(data=root.show_inventory(), cls=main.ItemListButton, selection_mode='single')
+
+                RecycleView:
+                    id: rv
+                    scroll_type: ['bars', 'content']
+                    scroll_wheel_distance: dp(114)
+                    bar_width: dp(10)
+                    viewclass: 'Row'
+                    RecycleBoxLayout:
+                        default_size: None, dp(30)
+                        default_size_hint: 1, None
+                        size_hint_y: None
+                        height: self.minimum_height
+                        orientation: 'vertical'
+                        spacing: dp(2)
+                        #multiselect: True
+                        #touch_multiselect: True
+
+#                ListView:
+#                    id: item_list_view
+#                    adapter: ListAdapter(data=root.show_inventory(), cls=main.InventoryList, selection_mode='single')
 
 
 #               barcode for milk: 078742022871
