more listview formatting and positioning and other minor updates

--- a/grocerylogger.kv
+++ b/grocerylogger.kv
@@ -40,7 +40,6 @@
 
     #background_normal: 'grey.jpg'
     #background_down: ''
-    background_color: (.88, .88, .88, 1)
     size_hint: .2, .1
 
 <MyScreenManager>:
@@ -56,7 +55,8 @@
                 font_size: 32
                 background_normal: ''
                 background_color: 1, .3, .4, .85
-                text: "Gro - Log"
+                text: "Gro - Log\n\nVirtual Pantry Logging System"
+                halign: 'center'
                 on_release:
                     root.current = "profile_screen"
 #----------PROFILE SCREEN--------------------------------------------------
@@ -77,14 +77,14 @@
 
                 text: "Add New Profile"
                 on_release:
-                    root.current = "create_screen"
+                    root.current = "create_profile_screen"
 #----------PROFILE CREATION SCREEN----------------------------------------
     Screen:
-        name: "create_screen"
+        name: "create_profile_screen"
         on_leave: root.ids.textinput.text = ''
         on_enter: root.ids.textinput.focus = True
         Popup:
-            title: 'What is your name?'
+            title: 'Profile Creation'
             title_align: 'center'
             auto_dismiss: False
             content: box
@@ -96,9 +96,10 @@
                 TextInput:
                     id: textinput
                     focus: True
-                    text: ''
+                    hint_text: 'Enter Profile Name'
+                    write_tab: False
                     multiline: False
-                    font_size: 24
+                    font_size: 20
                     on_text_validate: root.added_buttons.append(Button(text=root.ids.textinput.text))
                     on_text_validate: root.current = "profile_screen"
                 Button:
@@ -124,7 +125,7 @@
             text: ""
             pos_hint: {"center_x": .5, "top": 1}
         HeaderButton:
-            id: experationbutton
+            id: expirationbutton
 #            font_size: 15
 #            size_hint_y: .04
             text: ""
@@ -170,8 +171,8 @@
 #----------INVENTORY SCREEN----------------------------------------
     Screen:
         name:"inventory_screen"
-        on_enter: root.print_items()
-        on_leave: root.update_data()
+        on_enter: root.populate_inventory()
+        on_leave: root.depopulate_inventory()
 
         FloatLayout:
             StandardButton:
@@ -201,8 +202,8 @@
             GridLayout:
                 id: grid_list
                 cols: 1
-                padding: [0,180,0,100]
-                pos_hint: {"center_x": .5, "center_y":.5}
+                padding: [0,0,0,350]
+                pos_hint: {"top":.7}
                 
 
 #               barcode for milk: 078742022871
@@ -235,11 +236,12 @@
         FloatLayout:
             Label:
                 id: itemname
-                pos_hint: {"center_x": .7, "top": .8}
+                pos_hint: {"center_x": .5, "top": .9}
                 text: ""
+            #for debugging purposes, the below expiration date label is printed to the screen, remove in final build
             Label:
                 id: expdate
-                pos_hint: {"center_x": .7, "top": .7}
+                pos_hint: {"center_x": .5, "top": .8}
                 text: ""
             HeaderButton:
                 text: "Add Item"
@@ -269,7 +271,6 @@
                 size_hint: .2,.05
                 on_press:
                     root.search_item(barcode_number)
-                on_press:
 
             Button:
 
@@ -308,19 +309,19 @@
                 font_size: 16
                 size_hint: .1, .1
                 text: "Submit"
-                pos_hint: {"center_x": .2 , "center_y": .1}
+                pos_hint: {"center_x": .4 , "center_y": .1}
 
             Button:
                 font_size: 16
                 size_hint: .1, .1
                 text: "Other"
-                pos_hint: {"center_x": .33, "center_y": .1}
+                pos_hint: {"center_x": .5, "center_y": .1}
 
             Button:
                 font_size: 16
                 size_hint: .1, .1
                 text: "Cancel"
-                pos_hint: {"center_x": .46, "center_y": .1}
+                pos_hint: {"center_x": .6, "center_y": .1}
                 on_press:
                     root.transition.direction = "down"
                     root.current = "inventory_screen"
