--- a/grocerylogger.kv
+++ b/grocerylogger.kv
@@ -42,6 +42,59 @@
     #background_down: ''
     size_hint: .2, .1
 
+<OtherItems@Popup>:
+    size_hint: .6, .5
+    auto_dismiss: False
+    title: "Add Other Item"
+    title_align: "center"
+    FloatLayout
+        TextInput:
+            hint_text: "Enter Other Item Name"
+            write_tab: False
+            multiline: False
+            pos_hint: {"center_x": .5, "top": 1}
+            size_hint: .9,.15
+        Button:
+
+            text: "Enter Expiration Date (optional)"
+            pos_hint: {"center_x": .5, "top": .85}
+            size_hint: .9,.15
+#            on_press:
+#                root.get_date(month, day, year)
+
+        Spinner:
+            id: year
+            text: "Select Year"
+            pos_hint: {"center_x": .2, "top": .7}
+            size_hint: .3,.15
+            values: ['2018','2019','2020']
+
+        Spinner:
+            id: month
+            text: "Select Month"
+            pos_hint: {"center_x": .5, "top": .7}
+            size_hint: .3,.15
+            values: ['01','02','03','04','05','06','07','08','09','10','11','12']
+
+        Spinner:
+            id: day
+            text: "Select Day"
+            pos_hint: {"center_x": .8, "top": .7}
+            size_hint: .3,.15
+            values: ['01','02','03','04','05','06','07','08','09','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31']
+
+        Button:
+            text: "Submit"
+            size_hint: .4,.15
+            pos_hint: {"center_x": .25, "top": .15}
+            on_press: root.current = "inventory_screen"
+
+        Button:
+            text: "Cancel"
+            size_hint: .4,.15
+            pos_hint: {"center_x": .75, "top": .15}
+            on_press: root.dismiss()
+
 <MyScreenManager>:
     box2: box2
     grid1: grid_list
@@ -281,25 +334,26 @@
                     root.get_date(month, day, year)
 
             Spinner:
+                id: year
+                text: "Select Year"
+                pos_hint: {"center_x": .3, "top": .6}
+                size_hint: .2,.05
+                values: ['2018','2019','2020']
+
+            Spinner:
                 id: month
                 text: "Select Month"
-                pos_hint: {"center_x": .3, "top": .6}
+                pos_hint: {"center_x": .5, "top": .6}
                 size_hint: .2,.05
                 values: ['01','02','03','04','05','06','07','08','09','10','11','12']
 
             Spinner:
                 id: day
                 text: "Select Day"
-                pos_hint: {"center_x": .5, "top": .6}
+                pos_hint: {"center_x": .7, "top": .6}
                 size_hint: .2,.05
                 values: ['01','02','03','04','05','06','07','08','09','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31']
 
-            Spinner:
-                id: year
-                text: "Select Year"
-                pos_hint: {"center_x": .7, "top": .6}
-                size_hint: .2,.05
-                values: ['2018','2019','2020']
 
 
 
@@ -316,6 +370,8 @@
                 size_hint: .1, .1
                 text: "Other"
                 pos_hint: {"center_x": .5, "center_y": .1}
+                on_press:
+                    root.open_popup()
 
             Button:
                 font_size: 16
