--- a/grocerylogger.kv
+++ b/grocerylogger.kv
@@ -302,7 +302,7 @@
                 pos_hint: {"center_x": .5, "center_y": .1}
                 on_press:
                     app.root.search_recipes()
-                    root.current = "recipescreen"
+                   # root.current = "recipescreen"
 
             MiniButton:
                 text: "Add"
